# university_tasks

./: C++ Programming Style Guidelines.html  CMakeLists.txt  README.md
Intersections/src/: GeometricFigures.cpp  GeometricFigures.h  main.cpp
